# Advanced-Programming-Techniques

./: .gitignore  README.md
Homework 1/: CMakeLists.txt
Homework 1/problem1/: CMakeLists.txt  main.cpp
Homework 1/problem2/: CMakeLists.txt  main.cpp
Homework 1/problem3/: CMakeLists.txt  fib_helper.cpp  fib_helper.hpp  knight.cpp  knight.hpp  knights.cpp  knights.hpp  main.cpp
Homework 1/problem3/test/: CMakeLists.txt  test_fib_helper.cpp  test_integration.cpp  test_main.cpp
Homework_1/: .gitignore  CMakeLists.txt
Homework_1/problem1/: CMakeLists.txt  main.cpp
Homework_1/problem2/: CMakeLists.txt  Hmk1_Problem2.cpp  main.cpp
Homework_1/problem3/: CMakeLists.txt  Hmk1_Problem3.cpp  fib_helper.cpp  fib_helper.hpp  knight.cpp  knight.hpp  knights.cpp  knights.hpp  main.cpp  table.cpp  table.hpp
Homework_1/problem3/test/: CMakeLists.txt  test_fib_helper.cpp  test_integration.cpp
Homework_2/: .gitignore  CMakeLists.txt
Homework_2/cmake/: gtest.cmake
Homework_2/problem1/: CMakeLists.txt  ECE_Matrix.cpp  ECE_Matrix.h  ECE_Matrix.hpp  Hmk2_Test1.cpp  data_Problem1.txt  main.cpp
Homework_2/problem1/provided_files/: Hmk2_Test1.cpp  data_Problem1.txt
Homework_2/problem2/: CMakeLists.txt  grid.cpp  grid.hpp  main.cpp
Homework_2/problem2/test/: CMakeLists.txt  data_Problem2.txt  test_grid_class.cpp  test_grid_largest_product_along_line.cpp  test_grid_product_between_indices.cpp
Homework_2/problem3/: CMakeLists.txt  main.cpp  node.cpp  node.hpp  triangle.cpp  triangle.hpp
Homework_2/problem3/test/: CMakeLists.txt  test_triangle_determine_largest_parent.cpp  test_triangle_determine_valid_index.cpp  test_triangle_get_node.cpp
Homework_3/: CMakeLists.txt
Homework_3/problem1/: CMakeLists.txt  lattice.cpp  lattice.h  main.cpp
Homework_3/problem1/test/: CMakeLists.txt  test_lattice_get_node.cpp  test_lattice_get_parent_sum.cpp  test_main.cpp  tests_lattice_num_nodes.cpp
Homework_3/problem2/: CMakeLists.txt  grid.cpp  grid.hpp  main.cpp
Homework_3/problem2/test/: test_grid_largest_product_along_line.cpp  test_grid_product_between_indices.cpp
Homework_3/problem3/: CMakeLists.txt  main.cpp  node.cpp  node.h  triangle.cpp  triangle.h
Homework_3/problem3/test/: CMakeLists.txt  test_triangle_determine_largest_parent.cpp  test_triangle_determine_valid_index.cpp  test_triangle_get_node.cpp
Homework_4/Alex_Agudelo_Hmk4Prob1/CLIENT/: CMakeLists.txt  client.cpp  client.hpp  clientUDP.cpp  clientUDP.hpp
Homework_4/Alex_Agudelo_Hmk4Prob1/SERVER/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  serverUDP.cpp  serverUDP.hpp
Homework_4/Alex_Agudelo_Hmk4Prob2/: CMakeLists.txt
Homework_4/Alex_Agudelo_Hmk4Prob2/CLIENT/: CMakeLists.txt  clientUDP.cpp  clientUDP.h  clientUDP.hpp  main.cpp
Homework_4/Alex_Agudelo_Hmk4Prob2/SERVER/: CMakeLists.txt  main.cpp  serverUDP.cpp  serverUDP.h  serverUDP.hpp
Homework_5/: .gitignore
Homework_5/Alex_Agudelo_Hmk5/: compileSendToQsub  hmwk5.pbs  mainMpi.cpp  mainNotMpi.cpp  ship.cpp  world.cpp  world.h
Homework_5/Alex_Agudelo_Hmk5Prob1/: CMakeLists.txt  compileSendToQsub  hmwk5.pbs  main.cpp  mainMpi.cpp  mainNotMpi.cpp  ship.cpp  ship.hpp  world.cpp  world.hpp
Homework_5/Alex_Agudelo_Hmk5Prob1/test/: CMakeLists.txt  test_main.cpp  test_ship.cpp
Homework_6/: CMakeLists.txt  Things to intsall on WSL  board.cpp  board.h  main.cpp  space.cpp  space.h
Homework_6/exampleCode/: mainHelloWorld.cpp  mainMoveLightingRelativeToScene.cpp  mainSnowMen.cpp  mainSnowMenLighting.cpp  mainSolarSystem.cpp
final_project/: CMakeLists.txt  ECE_Bitmap.h  compileAndRun  compileSendToQsub  finalProject.pbs  footballField.cpp  footballField.h  main.cpp  mainMpi.cpp  mainNotMpi.cpp  uav.cpp  uav.h
final_project/examples/: mainTexture.cpp
